--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,13 @@
 spring.application.name=crud
+server.port=8080
+
+# Swagger Properties
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=alpha
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.display-tag-groups=true
 
 # Database Properties - MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/crud
