Add Dockerfile & docker-compose.yaml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ springdoc.swagger-ui.filter=true
 springdoc.swagger-ui.display-tag-groups=true
 
 # Database Properties - MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/crud
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://${SECRET_DB_HOST:localhost}:${SECRET_DB_PORT:3306}/${SECRET_DB_NAME:crud}
+spring.datasource.username=${SECRET_DB_USER:root}
+spring.datasource.password=${SECRET_DB_PASS:1234}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate Properties
@@ -20,3 +20,9 @@ spring.jpa.hibernate.ddl-auto=update
 
 # JPA Properties
 spring.jpa.show-sql= true
+
+# Logging
+logging.level.org.springframework=ERROR
+logging.level.com.numericaideas=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
