--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>app</finalName>
     </build>
 
 </project>
