--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,14 +2,16 @@ services:
   app:
     container_name: crud
     build: .
+    env_file:
+      - .env
     environment:
       SECRET_DB_HOST: db
-      SECRET_DB_PORT: 3306
-      SECRET_DB_NAME: crud
-      SECRET_DB_USER: root
-      SECRET_DB_PASS: 1234
+      SECRET_DB_PORT: ${DB_PORT}
+      SECRET_DB_NAME: ${MYSQL_DATABASE}
+      SECRET_DB_USER: ${MYSQL_USER}
+      SECRET_DB_PASS: ${MYSQL_ROOT_PASSWORD}
     ports:
-      - "8080:8080"
+      - "${APP_PORT:-8080}:8080"
     depends_on:
       db:
         condition: service_healthy
@@ -17,11 +19,13 @@ services:
   db:
     image: mysql
     container_name: mysqldb
+    env_file:
+      - .env
     environment:
-      MYSQL_ROOT_PASSWORD: 1234
-      MYSQL_DATABASE: crud
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     ports:
-      - "3306:3306"
+      - "${DB_PORT:-3306}:3306"
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
       timeout: 20s
@@ -30,13 +34,15 @@ services:
   phpmyadmin:
     image: phpmyadmin
     container_name: phpmyadmin-server
+    env_file:
+      - .env
     environment:
       PMA_HOST: db
-      PMA_PORT: 3306
-      PMA_USER: root
-      PMA_PASSWORD: 1234
+      PMA_PORT: ${DB_PORT}
+      PMA_USER: ${PMA_USER}
+      PMA_PASSWORD: ${PMA_PASSWORD}
     ports:
-      - "8081:80"
+      - "${PMA_PORT:-8081}:80"
     depends_on:
       - db
     restart: unless-stopped
